<resources>
    <string name="app_name">AndroidBarDemo</string>

    <string name="btn1">FLAG_ALLOW_LOCK_WHILE_SCREEN_ON</string>
    <string name="explain1_btn1">
        只要这个window对用户是可见的,则允许在屏幕开启的时候锁定屏幕
        这个flag可以单独的使用,也可以配合FLAG_KEEP_SCREEN_ON和(或者) FLAG_SHOW_WHEN_LOCKED使用
    </string>

    <string name="btn2">FLAG_DIM_BEHIND</string>
    <string name="explain1_1">1.当该window显示的时候,置于该window之后的window会变暗。</string>

    <string name="btn3">FLAG_BLUR_BEHIND</string>
    <string name="explain3_1">FLAG_BLUR_BEHIND</string>

    <string name="btn4">FLAG_NOT_FOCUSABLE</string>
    <string name="explain4_1">1.该window失去焦点,因此输入框等控件将无法进行交互使用</string>
    <string name="explain4_2">2.当前焦点依然存在于此窗口后面的任何可聚焦窗口</string>
    <string name="explain4_3">3.无论是否显式设置，将强制启用FLAG_NOT_TOUCH_MODAL。</string>
    <string name="explain4_4">4.此标志还意味着该window不需要与软输入法交互,因此,在Z顺序上,该window的位置将在任何输入法之上。可以使用FLAG_ALT_FOCUSABLE_IM来修改此行为。</string>

    <string name="btn5">FLAG_NOT_TOUCHABLE</string>
    <string name="explain5_1">1.这个window永远无法获取点击事件,输入框等控件也无法使用。事件将传入该window后面的可以获取点击事件的窗口</string>
    <string name="explain5_2">2.当焦点在当前window中,则当前window后面的窗口中的输入框将无法使用</string>

    <string name="btn6">FLAG_NOT_TOUCH_MODAL</string>
    <string name="explain6_1">1.当该window处于显示状态的时候,允许window之外的点击事件传递给其它的在其之后的window</string>
    <string name="explain6_2">2.不考虑受其它设置的影响,该window显示的时候获取到焦点,所以在其之后的window中的需要焦点的组件如输入框等是不可用的</string>
    <string name="explain6_3">3.不设置该属性,当前window将消耗所有事件，而不管它们是否在窗口内。</string>

    <string name="btn7">FLAG_TOUCHABLE_WHEN_WAKING</string>
    <string name="explaint7_1">当设置了这个值,则device休眠的时候,当触摸屏被点击,window会收到首次点击事件,通常当用户看不见东西时,首次点击事件会被系统消费</string>

    <string name="btn8">FLAG_KEEP_SCREEN_ON</string>
    <string name="explain8_1">1.只在该窗体下,让屏幕保持常亮</string>

    <string name="btn9">FLAG_LAYOUT_IN_SCREEN</string>


    <string name="btn10">FLAG_LAYOUT_NO_LIMITS</string>
    <string name="explain10_1">\t\t这window大小不再不受手机屏幕大小限制，即window可能超出屏幕之外，这时部分内容在屏幕之外。</string>
    <string name="explain10_2">1.启用该属性后:窗口会延伸至顶部状态栏和底部导航栏(状态栏和导航栏变为透明)</string>
    <string name="explain10_3">2.清除该属性后:窗口会给顶部状态栏和底部导航栏预留空间</string>
    <string name="explain10_4">3.扩大窗口之后,在启用该属性的时候,窗口居中;在禁用该属性的时候,窗口显示左上角</string>
    <string name="explain10_5">4.缩小窗口之后,在启用或禁用该属性的时候,窗口都是居中的</string>

    <string name="btn11">FLAG_FULLSCREEN</string>
    <string name="explain11_1">\t\t让window进行全屏显示</string>
    <string name="explain11_2">1.启用该属性后: 窗口会遮盖掉状态栏</string>
    <string name="explain11_3">2.window全屏,但并不会遮盖掉导航栏</string>

    <string name="btn12">FLAG_FORCE_NOT_FULLSCREEN</string>
    <string name="explain12_1">\t\t恢复window非全屏显示</string>
    <string name="explain12_2">1.启用该属性之后,在全屏模式下,强制显示状态栏,否则,状态栏需要用户主动去交互才会显示,数秒后再次自动消失</string>
    <string name="explain12_3">2.该属性仅在全屏模式下有效</string>

    <string name="btn13">FLAG_DITHER</string>
    <string name="explain13_1">FLAG_DITHER</string>

    <string name="btn14">FLAG_SECURE</string>
    <string name="explain14_1">\t\t系统会把当前窗口的内容视为安全隐私内容, 系统会阻止这些内容被截屏或者在不安全可靠的场景显示出来</string>
    <string name="explain14_2">\t\t1.阻止屏幕截图</string>
    <string name="explain14_3">\t\t2.在Recent apps(任务切换界面)中只显示应用名字和图标, 不显示内容</string>
    <string name="explain14_4">\t\t3.Google App的Now on tap功能不会去分析你的页面的内容</string>

    <string name="btn15">FLAG_SCALED</string>
    <string name="explain15_1">FLAG_SCALED</string>

    <string name="btn16">FLAG_IGNORE_CHEEK_PRESSES</string>
    <string name="explain16_1">
        这个flag一般用于,当用户把脸贴在屏幕上,它会过滤不需要的点击事件
        当检测到一个事件流,这个程序会直接接收到一个CANCEL事件.
        这样程序可以正确的处理这种情况,
        直到手指离开屏幕
    </string>

    <string name="btn17">FLAG_LAYOUT_INSET_DECOR</string>
    <string name="explain17_1">保证布局视图不会被屏幕装饰物(状态栏或导航栏)所覆盖遮挡</string>
    <string name="explain17_2">\t\t1.两个FLAG需一起使用,缺一不可</string>
    <string name="explain17_3">\t\t2.两个FLAG为系统默认自带</string>
    <string name="explain17_4">\t\t3.FLAG_LAYOUT_INSET_DECOR在AndroidR中已被废弃</string>

    <string name="btn18">FLAG_WATCH_OUTSIDE_TOUCH</string>
    <string name="explain18_1">监听窗口之外的触摸事件</string>
    <string name="explain18_2">\t\t1.需与FLAG_NOT_TOUCH_MODAL合用,否则无效</string>
    <string name="explain18_3">\t\t2.设置了该属性之后,FLAG_NOT_TOUCH_MODAL将消费外部的触摸事件(点击之后外部,弹窗消失)</string>
    <string name="explain18_4">\t\t3.与FLAG_NOT_TOUCH_MODAL一起设置之后，外部的触摸事件会触发一个带有MotionEvent.ACTION_OUTSIDE的特殊MotionEvent。请注意，您将不会收到完整的向下/移动/向上手势，只有第一个向下的位置作为外部操作。</string>
    <string name="explain18_5">\t\t4.与FLAG_NOT_TOUCH_MODAL一起设置之后，将不会收到完整的向下/移动/向上手势，只有第一个向下的位置作为外部操作。</string>

    <string name="btn19">FLAG_ALT_FOCUSABLE_IM</string>
    <string name="explain19_1">控制窗口是否可以与输入法进行交互</string>
    <string name="explain19_2">\t\t1.设置而改属性之后,无法和输入法进行交互操作</string>
    <string name="explain19_3">\t\t2.与FLAG_NOT_FOCUSABLE结合使用时，此标志无效，因为输入方法原本就无法和设置了FLAG_NOT_FOCUSABLE标志的窗口进行交互。</string>

    <string name="btn20">FLAG_DRAWS_SYSTEM_BAR_BACKGROUNDS</string>
    <string name="explain20_1">控制窗口中系统栏的颜色</string>
    <string name="explain20_2">\t\t1.如果设置了此选项，系统栏将以透明背景绘制，并且此窗口中的相应区域将填充window#getStatusBarColor()和window#getNavigationBarColor()中指定的颜色。</string>

    <string name="btn21">FLAG_SHOW_WHEN_LOCKED</string>
    <string name="explain21_1">
        一个特殊的flag,使得window可以在锁屏状态下显示
        这个flag会使得window比keyguard或其他锁屏界面具有更高的层级
        可以配合FLAG_KEEP_SCREEN_ON使用,点亮屏幕,在显示keyguard window之前显示你的window.
        可以配合FLAG_DISMISS_KEYGUARD使用来自动解锁没密码的keyguards
        这个flag只能应用在最顶层的全屏window上
    </string>
    <string name="explain21_2">API27中已废弃</string>

    <string name="btn22">FLAG_SHOW_WALLPAPER</string>
    <string name="explain22_1">
        请求系统将壁纸显示在window后面,这个window表面需要是透明的才能显示出墙纸.
        这个flag只能保证如果你的window有透明的区域,墙纸会显示在那
    </string>

    <string name="btn23">FLAG_TURN_SCREEN_ON</string>
    <string name="explain23_1">当window被添加或者显示,系统会点亮屏幕,就好像用户唤醒屏幕一样</string>
    <string name="explain23_2">API27中已废弃</string>

    <string name="btn24">FLAG_DISMISS_KEYGUARD</string>
    <string name="explain24_1">当使用的是无密码的锁屏界面,显示此window会使锁屏界面被自动解锁</string>
    <string name="explain24_2">API26中已废弃</string>

    <string name="btn25">FLAG_SPLIT_TOUCH</string>
    <string name="explain25_1">
        当window设置这个flag,window会接收来自window边界之外发送给其他window的点击事件,支持多点触控.
        当这个flag没有设置的时候,第一下点击则决定了哪个window会接收整个点击事件,直到手指拿开.
        当设置了这个flag,这每一个点击事件(不一定是第一个)都决定了那个window来接收剩下的点击事件,直到手指拿开.点击事件会被分开传递给多个window
    </string>

    <string name="btn26">FLAG_HARDWARE_ACCELERATED</string>
    <string name="explain26_1">硬件加速</string>

    <string name="btn27">FLAG_LAYOUT_IN_OVERSCAN</string>

    <string name="btn28">FLAG_TRANSLUCENT_STATUS</string>
    <string name="btn29">FLAG_TRANSLUCENT_MAVIGATION</string>

    <string name="btn30">FLAG_LOCAL_FOCUS_MODE</string>
    <!--<string name="btn31">FLAG_SLIPPERY</string>-->
    <string name="btn32">FLAG_LAYOUT_ATTACHED_IN_DECOR</string>

    <string name="systemUI">setSystemUiVisibility(int visibility)</string>

    <string name="systemUI_01">SYSTEM_UI_FLAG_VISIBLE</string>
    <string name="systemUI_01_e">\t\t用户表示状态栏可见，默认flag</string>

    <string name="systemUI_02">SYSTEM_UI_FLAG_FULLSCREEN</string>
    <string name="systemUI_02_e">\t\t全屏模式，占据整个屏幕，隐藏状态栏等界面，不过导航栏不会隐藏。如果用户进行操作，隐藏的系统界面会立马出现并清除该flag。</string>

    <string name="systemUI_03">SYSTEM_UI_FLAG_HIDE_NAVIGATION</string>
    <string name="systemUI_03_e">\t\t隐藏导航栏，布局会往下移。如果用户进行操作，导航栏会立马出现并清除该flag。</string>

    <string name="systemUI_04">SYSTEM_UI_FLAG_IMMERSIVE</string>
    <string name="systemUI_04_e">\t\t仅能和SYSTEM_UI_FLAG_HIDE_NAVIGATION共同使用，使用户操作不再显示导航栏（但是仍能通过从底部往上滑调出导航栏并清除flag）。单独使用无效。(最低api=19)</string>

    <string name="systemUI_05">SYSTEM_UI_FLAG_IMMERSIVE_STICKY</string>
    <string name="systemUI_05_e">\t\t仅能和SYSTEM_UI_FLAG_FULLSCREEN或SYSTEM_UI_FLAG_HIDE_NAVIGATION共同使用。用户操作不再清除flag，从边缘滑入可以调出状态栏和导航栏，并且过几秒之后自动隐藏。单独使用无效。(最低api=19)</string>

    <string name="systemUI_06">SYSTEM_UI_FLAG_LAYOUT_FULLSCREEN</string>
    <string name="systemUI_06_e">\t\t不隐藏状态栏，但是app会占满屏幕，但是会被状态栏遮盖住。</string>

    <string name="systemUI_07">SYSTEM_UI_FLAG_LAYOUT_HIDE_NAVIGATION</string>
    <string name="systemUI_07_e">\t\t不隐藏导航栏，但是app会占满屏幕，但是会被导航栏遮盖住。</string>

    <string name="systemUI_08">SYSTEM_UI_FLAG_LAYOUT_STABLE</string>
    <string name="systemUI_08_e">\t\t此View一般和SYSTEM_UI_FLAG_FULLSCREEN或SYSTEM_UI_FLAG_HIDE_NAVIGATION等隐藏系统控件的FLAG一起使用，它可以保证在系统控件隐藏显示时，不会让本view重新layout。也就是你手动隐藏状态栏或导航栏时，所有的view也都待在本来的位置上不会动。</string>

    <string name="systemUI_09">SYSTEM_UI_FLAG_LIGHT_NAVIGATION_BAR</string>
    <string name="systemUI_09_e">\t\t导航栏变为亮色模式，白底黑字(最低api=26)</string>

    <string name="systemUI_10">SYSTEM_UI_FLAG_LIGHT_STATUS_BAR</string>
    <string name="systemUI_10_e">\t\t状态栏变为亮色模式，白底黑字(最低api=26)</string>

    <string name="systemUI_11">SYSTEM_UI_LAYOUT_FLAGS</string>
    <string name="systemUI_11_e">\t\t效果相当于 SYSTEM_UI_FLAG_LAYOUT_HIDE_NAVIGATION | SYSTEM_UI_FLAG_LAYOUT_FULLSCREEN</string>

    <string name="systemUI_12">SYSTEM_UI_FLAG_LOW_PROFILE</string>
    <string name="systemUI_12_e">\t\t低调模式，我们可以设置该标签让状态栏或导航栏上的图标变暗和让一些不重要的图标消失。适用一些全屏操作，比如游戏，阅读等。(在页面有任何交互时，会被清除，样式还原。)</string>
    <string name="title_activity_test4">Test4Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


</resources>
