<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:onClick="onClick"
                android:id="@+id/btn1"
                android:text="@string/btn1"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:onClick="onClick"
                android:id="@+id/btn2"
                android:text="@string/btn2"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:onClick="onClick"
                android:id="@+id/btn3"
                android:text="@string/btn3"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:onClick="onClick"
                android:id="@+id/btn4"
                android:text="@string/btn4"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:onClick="onClick"
                android:id="@+id/btn5"
                android:text="@string/btn5"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:onClick="onClick"
                android:id="@+id/btn6"
                android:text="@string/btn6"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:onClick="onClick"
                android:id="@+id/btn7"
                android:text="@string/btn7"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:onClick="onClick"
                android:id="@+id/btn8"
                android:text="@string/btn8"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:onClick="onClick"
                android:id="@+id/btn9"
                android:text="@string/btn9"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:onClick="onClick"
                android:id="@+id/btn10"
                android:text="@string/btn10"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:onClick="onClick"
                android:id="@+id/btn11"
                android:text="@string/btn11"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:onClick="onClick"
                android:id="@+id/btn12"
                android:text="@string/btn12"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:onClick="onClick"
                android:id="@+id/btn13"
                android:text="@string/btn13"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:onClick="onClick"
                android:id="@+id/btn14"
                android:text="@string/btn14"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:onClick="onClick"
                android:id="@+id/btn15"
                android:text="@string/btn15"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:onClick="onClick"
                android:id="@+id/btn16"
                android:text="@string/btn16"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:onClick="onClick"
                android:id="@+id/btn17"
                android:text="@string/btn17"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:onClick="onClick"
                android:id="@+id/btn18"
                android:text="@string/btn18"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn19"
                android:onClick="onClick"
                android:text="@string/btn19"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn20"
                android:onClick="onClick"
                android:text="@string/btn20"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn21"
                android:onClick="onClick"
                android:text="@string/btn21"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn22"
                android:onClick="onClick"
                android:text="@string/btn22"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn23"
                android:onClick="onClick"
                android:text="@string/btn23"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn24"
                android:onClick="onClick"
                android:text="@string/btn1"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn25"
                android:onClick="onClick"
                android:text="@string/btn25"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn26"
                android:onClick="onClick"
                android:text="@string/btn26"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn27"
                android:onClick="onClick"
                android:text="@string/btn27"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn28"
                android:onClick="onClick"
                android:text="@string/btn28"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn29"
                android:onClick="onClick"
                android:text="@string/btn29"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:onClick="onClick"
                android:id="@+id/btn30"
                android:text="@string/btn30"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!--<Button-->
                <!--android:onClick="onClick"-->
                <!--android:id="@+id/btn31"-->
                <!--android:text="@string/btn31"-->
                <!--android:textAllCaps="false"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content" />-->

            <Button
                android:onClick="onClick"
                android:id="@+id/btn32"
                android:text="@string/btn32"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>