<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".child.Main9Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:text="@string/explain18_1"
            android:textColor="#333333"
            android:textSize="13sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/explain18_2"
            android:textColor="#333333"
            android:textSize="13sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/explain18_3"
            android:textColor="#333333"
            android:textSize="13sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/explain18_4"
            android:textColor="#333333"
            android:textSize="13sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/explain18_5"
            android:textColor="#333333"
            android:textSize="13sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <CheckBox
            android:id="@+id/isSet"
            android:text="启用: FLAG_NOT_TOUCH_MODAL"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="30dp" />
        <CheckBox
            android:id="@+id/isUse"
            android:text="启用: FLAG_WATCH_OUTSIDE_TOUCH"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="30dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn"
        android:text="打开弹框"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>